stretch/supply-chain/clusterpolicy-restrict-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
spec:
  validationFailureAction: Enforce
  rules:
    - name: validate-registry
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Images must come from trusted registries only."
        pattern:
          spec:
            containers:
              - image: "127.0.0.1:5000/*"
